--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="author" content="Ambrósia Andrade">
-    <meta name="description" content="Free Punnet Square Webpage">
+    <meta name="description" content="Desenvolvido para fins didáticos, este site tem o objetivo de auxiliar os estudos da genética. Gera o quadro de Punnett com um traço.">
     <meta name="keywords" content="Quadrado de punnet, Punnett square">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quadro de Punnett</title>
