--- a/index.html
+++ b/index.html
@@ -57,8 +57,11 @@
     </div>
     <footer>
         <p id="foot">2021 - Ambrósia Andrade -    
-            <a href="https://github.com/dev-ambro" target="_blank" alt="Logo do GitHub">
-                <i class="fa fa-github" style="font-size:24px"></i>
+            <a href="https://github.com/ambrosiaandrade" target="_blank" alt="Logo do GitHub" title="Ir ao GitHub de Ambrósia Andrade">
+                <i class="fa">&#xf09b;</i>
+            </a>
+            <a href="https://linkedin.com/in/ambrosiaandrade" target="_blank" alt="Logo do Linkedin" title="Ir ao Linkedin de Ambrósia Andrade">
+                <i class="fa">&#xf0e1;</i>
             </a>
         </p></footer>
     <script src="./js/script.js"></script>
